update biblioteca