@@ -1,10 +1,10 @@
+
 package backend;
 
 import com.google.gson.Gson;
 import com.google.gson.GsonBuilder;
 
 import java.nio.file.Files;
-import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -43,10 +43,13 @@ public class Mensola {
             throw new Exception("Il libro è presente nella mensola");
     }
 
-//    public void removeBook(Libro l) {
-//        if (mensola.contains(l))
-//            mensola.remove(l);
-//    }
+    public void removeBook(Libro l) throws Exception {
+        if (l != null && mensola.contains(l)) {
+            mensola.remove(l);
+            numeroLibri--;
+        } else
+            throw new Exception("Il libro non è presente nella mensola");
+    }
 
     public void setInto(Libro l, int posizione, Scanner tastiera) {
         System.out.println("In che posizione vuoi settare il libro: ");
@@ -70,25 +73,52 @@ public class Mensola {
         return mensola.isEmpty();
     }
 
-    public void salvaFile(String nomeFile) throws Exception {
-        Gson json = new GsonBuilder().setPrettyPrinting().create();
-        // Gson json = new Gson();
-        String jsonContent = json.toJson(mensola);
-        try{
-            Files.write(Paths.get(nomeFile), jsonContent.getBytes());
-        }catch(Exception e){
-            throw new Exception(e);
+    public boolean findLibro(String autore, String titolo) {
+        boolean trovato = false;
+        for (Libro l : mensola) {
+            if (l.getAutore().equals(autore) && l.getTitolo().equals(titolo)) {
+                l.toString();
+                trovato = true;
+            }
+        }
+        if (!trovato)
+            System.out.println("Libro non presente nella mensola");
+
+
+        return trovato;
+    }
+
+    @Override
+    public String toString() {
+        return super.toString();
+    }
+
+    public void salvaJson(String fileName) {
+
+        try {
+            Gson gson = new GsonBuilder().setPrettyPrinting().create();
+            String jsonContent = gson.toJson(mensola);
+            Files.write(Paths.get(fileName), jsonContent.getBytes());
+            System.out.println("Dati salvati con successo");
+        } catch (Exception e) {
+            System.out.println("Errore durante il salvataggio: " + e.getMessage());
         }
     }
 
-    public void leggiFile(String nomeFile) throws Exception {
-        try{
-            byte[] jsonData = Files.readAllBytes(Path.of(nomeFile));
-            Gson json = new GsonBuilder().setPrettyPrinting().create();
-            Libro[] collezione = json.fromJson(new String (jsonData), Libro[].class);
+    public void leggiJson(String fileName) {
+        try {
+            byte[] jsonData = Files.readAllBytes(Paths.get(fileName));
+            Gson gson = new GsonBuilder().setPrettyPrinting().create();
+            Libro[] collezione = gson.fromJson(new String(jsonData), Libro[].class);
             mensola = new ArrayList<>(Arrays.asList(collezione));
-        }catch(Exception e){
-            throw new Exception(e);
+            System.out.println(mensola);
+        } catch (Exception e) {
+            System.out.println(e.getMessage());
         }
     }
+
+    public String csv() {
+        return String.format("%s", mensola);
+    }
+
 }
